--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,17 @@
-node_modules
-dist
+﻿node_modules/
+dist/
+build/
+.cache/
+.tmp/
+coverage/
+*.log
+.env
 .DS_Store
-server/public
-vite.config.ts.*
-*.tar.gz
+Thumbs.db
+desktop.ini
+~$*
+attached_assets/
+.local/
+*.mp4
+*.mkv
+*.zip
